--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Riwei's Blog
 email: riweipan@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  A lifelong learning
+  Focusing on storage technology!
 # baseurl: "/" # the subpath of your site, e.g. /blog
 # url: "http://ejjoo.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: riweipan
